--- a/frontend/src/app/components/pages/account-page/account-page.component.css
+++ b/frontend/src/app/components/pages/account-page/account-page.component.css
@@ -1,9 +1,12 @@
+
 .wrapper {
+    height: 100%;  
+    min-height: 80vh;
     padding: 1rem 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 2rem;
     overflow: hidden;
 }
@@ -37,6 +40,7 @@ input {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 0.5rem;
 }
 
@@ -77,7 +81,7 @@ label {
 
 .scroller-container {
   width: 80%;
-  height: 500px;
+
 }
 
 .scroller {
