--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -5,25 +5,35 @@
 }
 
 .aside{
-  width: 300px;
+  width: 100vw;
   padding: 1rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+  background-color: rgba(245, 245, 245, 0.772);
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  }
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  position: fixed;
+  z-index: 4;
+}
+
+.hide {
+  display: none;
+}
+
+app-search {
+  align-self: flex-start;
+}
 
 .products-container {
-    height: 600px;
-    width: 80%;
-    margin: 0 auto;
+    height: 100%;
+    width: 100%;
+    margin: 0rem auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     list-style-type: none;
-    padding: 0 5rem;
-    overflow-y: scroll;
+    padding: 5rem;
   }
 
   ::-webkit-scrollbar {
@@ -47,27 +57,30 @@
   }
   
 
-  @media screen and (max-width: 1400px) {
-    .aside {
-      width: 1100px;
-      box-shadow: none;
-      flex-direction: row;
-      justify-content: center;
-      align-items: flex-start;
-      gap: 3rem;
-    }
-  }
-
   @media screen and (max-width: 700px) {
     .aside {
       flex-direction: column;
       align-items: center;
-      gap: 0;
+      padding: 1rem;
+      gap: 1rem;
+      background-color: #fcfcfccb;
+    }
+
+    app-search {
+      align-self: center;
     }
 
     .products-container {
+      padding-top: 1rem;
+    }
+    
+  }
+
+
+  @media screen and (max-width: 1200px) {
+    .products-container {
       width: 100%;
-   
+      padding: 5rem 0;
     }
     
   }
