--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -5,7 +5,7 @@
     <form [formGroup]="loginForm" (ngSubmit)="submit()">
       <app-text-input
         [control]="fc.email"
-        [showErrorsWhen]="isSubmitted || fc.email.touched"
+        [showErrorsWhen]="isSubmitted || (fc.email.touched && fc.email.invalid)"
         type="email"
         placeholder="Email"
         icon="email"
@@ -21,7 +21,7 @@
         [showPassword]="showPassword"
         (iconClick)="togglePasswordVisibility('showPassword')"
         [control]="fc.password"
-        [showErrorsWhen]="isSubmitted || fc.password.touched"
+        [showErrorsWhen]="isSubmitted || (fc.password.touched && fc.password.invalid)"
         [type]="showPassword ? 'text' : 'password'"
         placeholder="Password"
         icon="lock"
