--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -14,23 +14,28 @@ header{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 5;
   }
 
   a.login-link  {
-    height: 100%;
+    height: 60px;
   }
 
-  a{ 
+  a, button{ 
     height: 100%;
     padding: 1rem 1.5rem;
     color:  #3f51b5;
   }
   
-  a:hover{
+  a:hover, button:hover{
     background:#3f51b5;
     color: white;
     cursor: pointer;
+  }
+
+  button {
+    border: none;
+    background-color: white;
   }
   
   .container{
@@ -59,10 +64,12 @@ header{
 
   li {
     height: 100%;
+    align-self: center;
   }
   
   ul a{
-    display: inline-block;
+    display: flex;
+    align-items: center;
   }
 
   .dashboard {
@@ -104,9 +111,7 @@ header{
     justify-content: center;
   }
 
-  .login-link {
-    height: 100%;
-  }
+ 
 
   
   
@@ -152,9 +157,17 @@ header{
     
   }
 
-  @media screen and (max-width: 990px) {
+  @media screen and (max-width: 500px) {
   
-    .header-con.container {
+    .container {
       width: 100%;
+    }
+
+    a, button, .logo {
+      padding-inline: 1.2rem;
+    }
+
+    .logo {
+      padding-inline: 1rem;
     }
   }
