--- a/frontend/src/app/components/partials/dialog/dialog.component.html
+++ b/frontend/src/app/components/partials/dialog/dialog.component.html
@@ -61,13 +61,13 @@
               placeholder="Image"
             />
             <!-- Browse Button -->
-            <button mat-flat-button color="primary" class="file-browser">
+            <button mat-flat-button color="accent" class="file-browser">
               Browse
             </button>
           </mat-toolbar>
         </mat-form-field>
 
-        <!-- Fetch selected filed on change -->
+        <!-- Fetch selected files on change -->
         <input
           type="file"
           #UploadFileInput
@@ -86,10 +86,10 @@
     </form>
   </div>
 
-  <div style="margin-bottom: 10px" mat-dialog-action [align]="'end'">
-    <button mat-raised-button color="warn" mat-dialog-close>Close</button>
+  <div style="padding: 1rem; margin: 0 auto; display: flex;" mat-dialog-action [align]="'center'">
+    <button  style="width: 50%;" mat-raised-button color="warn" mat-dialog-close>Close</button>
     <button
-      style="margin: 0 10px"
+      style="margin: 0 10px; width: 50%;"
       mat-raised-button
       color="primary"
       (click)="addProduct()"
