--- a/frontend/src/app/components/partials/button/button.component.html
+++ b/frontend/src/app/components/partials/button/button.component.html
@@ -1,16 +1,16 @@
 <div class="container">
-    <button
-     [ngStyle]="{
-       color:color,
-       'background-color':bgColor,
-       'font-size.rem':fontSizeRem,
-       'width.rem':widthRem
-     }"
-     [type]="type"
-     [disabled]= "disabled"
-     (click)="onClick.emit()"
-     >
-     {{text}}
-    </button>
-  </div>
-  
+  <button
+    [ngStyle]="{
+      cursor: cursor,
+      color: color,
+      'background-color': bgColor,
+      'font-size.rem': fontSizeRem,
+      'width.rem': widthRem
+    }"
+    [type]="type"
+    [disabled]="disabled"
+    (click)="onClick.emit()"
+  >
+    {{ text }}
+  </button>
+</div>
