--- a/frontend/src/app/components/partials/input-validation/input-validation.component.html
+++ b/frontend/src/app/components/partials/input-validation/input-validation.component.html
@@ -1,4 +1,4 @@
-<div class="error-list" *ngIf="errorMessages && showErrorsWhen">
+<div class="error-list" *ngIf="errorMessages && showErrorsWhen || isInvalid">
     <div *ngFor="let errorMessage of errorMessages">
         {{errorMessage}}
     </div>
