--- a/frontend/src/app/components/partials/text-input/text-input.component.html
+++ b/frontend/src/app/components/partials/text-input/text-input.component.html
@@ -17,5 +17,6 @@
   <app-input-validation
     [control]="control"
     [showErrorsWhen]="showErrorsWhen"
+    [isInvalid]="isInvalid"
   ></app-input-validation>
 </div>
