--- a/frontend/src/app/components/pages/register-page/register-page.component.html
+++ b/frontend/src/app/components/pages/register-page/register-page.component.html
@@ -1,12 +1,13 @@
 <div class="container">
-  <app-partical-background />
+  {{isInvalid | json}}
+
 
   <div class="details">
     <app-title title="Register"></app-title>
     <form [formGroup]="registerForm" (ngSubmit)="submit()">
       <app-text-input
         [control]="fc.name"
-        [showErrorsWhen]="isSubmitted || (fc.name.touched && fc.name.invalid)"
+        [showErrorsWhen]="isSubmitted"
         placeholder="Name"
         icon="person"
         [border]="fc.name.touched && fc.name.invalid ? '2px solid #F50057' : ''"
@@ -14,7 +15,7 @@
 
       <app-text-input
         [control]="fc.email"
-        [showErrorsWhen]="isSubmitted ||(fc.email.touched && fc.email.invalid)"
+        [showErrorsWhen]="isSubmitted"
         placeholder="Email"
         icon="email"
         type="email"
@@ -28,7 +29,7 @@
         [showPassword]="showPassword"
         (iconClick)="togglePasswordVisibility('showPassword')"
         [control]="fc.password"
-        [showErrorsWhen]="isSubmitted || (fc.password.touched && fc.password.invalid)"
+        [showErrorsWhen]="isSubmitted"
         placeholder="Password"
         icon="lock"
         [type]="showPassword ? 'text' : 'password'"
@@ -36,13 +37,13 @@
           fc.password.touched && fc.password.invalid ? '2px solid #F50057' : ''
         "
       />
-
       <app-text-input
+      
         #confirmPassword
         [showPassword]="showConfirmPassword"
         (iconClick)="togglePasswordVisibility('showConfirmPassword')"
         [control]="fc.confirmPassword"
-        [showErrorsWhen]="isSubmitted || (fc.confirmPassword.touched && fc.confirmPassword.invalid)"
+        [showErrorsWhen]="isSubmitted"
         placeholder="Confirm Password"
         icon="lock"
         [type]="showConfirmPassword ? 'text' : 'password'"
@@ -55,7 +56,7 @@
 
       <app-text-input
         [control]="fc.address"
-        [showErrorsWhen]="isSubmitted || (fc.address.touched && fc.address.invalid)"
+        [showErrorsWhen]="isSubmitted"
         placeholder="Address"
         icon="place"
         [border]="
@@ -64,10 +65,9 @@
       />
 
       <app-button
-        [disabled]="registerForm.touched && registerForm.invalid"
-        bgColor="{{
-          registerForm.touched && registerForm.invalid ? '#3f3f3f' : '#F50057'
-        }}"
+        [disabled]="isFormInvalid"
+        [cursor]="isFormInvalid ? 'not-allowed' : 'pointer'"
+        [bgColor]="isFormInvalid ? '#3f3f3f' : '#F50057'"
         text="Register"
       />
 
