reset password implemented

--- a/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.html
+++ b/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.html
@@ -1,1 +1,44 @@
-<p>forgotten-password works!</p>
+<div class="container">
+  <app-partical-background />
+  <div class="details">
+    <app-title title="Reset Password"></app-title>
+    <form [formGroup]="forgetForm" (ngSubmit)="submit()">
+      <span>
+        Enter your email and we'll send you instructions on how to reset your
+        password.
+      </span>
+      <app-text-input
+        [control]="fc.email"
+        [showErrorsWhen]="isSubmitted"
+        type="email"
+        placeholder="Email"
+        icon="email"
+      ></app-text-input>
+
+      
+      <app-button
+        [disabled]="isFormInvalid"
+        [cursor]="isFormInvalid ? 'not-allowed' : 'pointer'"
+        [bgColor]="isFormInvalid ? '#3f3f3f' : '#F50057'"
+        text="Submit"
+      ></app-button>
+
+      <app-button
+        [bgColor]="'#3f3f3f'"
+        text="Cancel"
+      ></app-button>
+
+      <div class="register">
+        <a routerLink="/register" [queryParams]="{ returnUrl: returnUrl }">
+          Create Account
+        </a>
+        <a
+          routerLink="/forgotten-password"
+          [queryParams]="{ returnUrl: returnUrl }"
+        >
+          Forgotten Password?
+        </a>
+      </div>
+    </form>
+  </div>
+</div>
