--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -36,6 +36,9 @@
         <a routerLink="/register" [queryParams]="{ returnUrl: returnUrl }">
           Register here
         </a>
+        <a routerLink="/forgotten-password" [queryParams]="{ returnUrl: returnUrl }">
+          Forgotten Paaword
+        </a>
       </div>
     </form>
   </div>
