--- a/frontend/src/app/components/pages/reset-password/reset-password.component.html
+++ b/frontend/src/app/components/pages/reset-password/reset-password.component.html
@@ -1,1 +1,38 @@
-<p>reset-password works!</p>
+<div class="container">
+  <app-partical-background />
+  <div class="details">
+    <app-title title="Reset Password"></app-title>
+    <form [formGroup]="resetForm" (ngSubmit)="reset()">
+      <span> Please use strong password. </span>
+
+      <app-text-input
+        #password
+        [showPassword]="showPassword"
+        (iconClick)="togglePasswordVisibility('showPassword')"
+        [control]="fc.password"
+        [showErrorsWhen]="isSubmitted"
+        placeholder="Password"
+        icon="lock"
+        [type]="showPassword ? 'text' : 'password'"
+      />
+
+      <app-text-input
+        #confirmPassword
+        [showPassword]="showConfirmPassword"
+        (iconClick)="togglePasswordVisibility('showConfirmPassword')"
+        [control]="fc.confirmPassword"
+        [showErrorsWhen]="isSubmitted"
+        placeholder="Confirm Password"
+        icon="lock"
+        [type]="showConfirmPassword ? 'text' : 'password'"
+      />
+
+      <app-button
+        [disabled]="isFormInvalid"
+        [cursor]="isFormInvalid ? 'not-allowed' : 'pointer'"
+        [bgColor]="isFormInvalid ? '#3f3f3f' : '#F50057'"
+        text="Submit"
+      ></app-button>
+    </form>
+  </div>
+</div>
