international telephone input in edit-account-page added.

--- a/frontend/src/app/components/pages/account-page/account-page.component.css
+++ b/frontend/src/app/components/pages/account-page/account-page.component.css
@@ -33,7 +33,7 @@ input {
 .form {
     margin: 0 auto;
     padding: 2rem;
-    width: 300px;
+    width: 25rem;
     background-color: #f3f3f3;
     border-radius: 5px;
     box-shadow: 0 0 8px rgb(185, 185, 185);
