--- a/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.html
+++ b/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.html
@@ -20,11 +20,13 @@
         [disabled]="isFormInvalid"
         [cursor]="isFormInvalid ? 'not-allowed' : 'pointer'"
         [bgColor]="isFormInvalid ? '#3f3f3f' : '#F50057'"
+        [widthRem]="25"
         text="Submit"
       ></app-button>
 
       <app-button
         [bgColor]="'#3f3f3f'"
+        [widthRem]="25"
         text="Cancel"
       ></app-button>
 
