--- a/frontend/src/app/components/pages/reset-password/reset-password.component.html
+++ b/frontend/src/app/components/pages/reset-password/reset-password.component.html
@@ -3,7 +3,7 @@
   <div class="details">
     <app-title title="Reset Password"></app-title>
     <form [formGroup]="resetForm" (ngSubmit)="reset()">
-      <span> Please use strong password. </span>
+      <span> Enter your new password. </span>
 
       <app-text-input
         #password
@@ -31,6 +31,7 @@
         [disabled]="isFormInvalid"
         [cursor]="isFormInvalid ? 'not-allowed' : 'pointer'"
         [bgColor]="isFormInvalid ? '#3f3f3f' : '#F50057'"
+        [widthRem]="25"
         text="Submit"
       ></app-button>
     </form>
