--- a/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.css
+++ b/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.css
@@ -4,7 +4,8 @@ app-partial-background{
 .container {
     display: flex;
     justify-content: center;
-    align-items: centfler;
+    align-items: center;
+    min-height: 85vh;
     height: 100%;
     margin-top: 3rem;
 }
@@ -38,5 +39,11 @@ form {
 
 .register a {
     color:  #3f51b5;
+}
+
+span {
+    font-size: 14px;
+    margin-bottom: 1.5rem;
+    color: #414141;
 }
 
