--- a/frontend/src/app/components/pages/reset-password/reset-password.component.css
+++ b/frontend/src/app/components/pages/reset-password/reset-password.component.css
@@ -4,8 +4,9 @@ app-partial-background{
 .container {
     display: flex;
     justify-content: center;
-    align-items: centfler;
+    align-items: center;
     height: 100%;
+    min-height: 85vh;
     margin-top: 3rem;
 }
 
@@ -29,7 +30,6 @@ form {
     justify-content: center;
 }
 
-
 .register{
     margin-top: 1rem;
     display: flex;
@@ -41,7 +41,11 @@ form {
     color:  #3f51b5;
 }
 
-app-button {
-    margin-top: 1rem;
-  }
+span {
+    font-size: 14px;
+    margin-bottom: 1rem;
+    color: #414141;
+}
+
+
   
