--- a/frontend/src/app/components/partials/footer/footer.component.css
+++ b/frontend/src/app/components/partials/footer/footer.component.css
@@ -1,5 +1,8 @@
 footer {
-    width: 100vw;
+    width: 100%;
+    height: 40px;
+    margin: 0 auto;
+    padding: 2rem;
     position: absolute;
     left: 0;
     bottom: 0;
