--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -9,17 +9,21 @@
 
 html{
   font-size:16px;
-  margin-top: 60px;
   background-color: #fcfcfc;
 
 }
 
 body{
-  margin: 0;
+  min-height: 90vh;
+  height: 100%;
+  margin: 60px 0 0;
   background-color: #fcfcfc;
+  position: relative;
   
 }
 
 a{
   text-decoration: none;
 }
+
+
