--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -1,11 +1,15 @@
+
+
 .wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  min-height: 90vh;
 }
 
 .aside{
   width: 100vw;
+  height: 100%;
   padding: 1rem;
   background-color: rgba(245, 245, 245, 0.772);
   display: flex;
