--- a/frontend/src/app/components/partials/dialog/dialog.component.html
+++ b/frontend/src/app/components/partials/dialog/dialog.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <h1 mat-dialog-title>Add Product Form</h1>
+  <h1 mat-dialog-title>{{ formTitle }}</h1>
   <div mat-dialog-content>
     <form [formGroup]="productForm">
       <mat-form-field appearance="outline">
