--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -17,7 +17,7 @@
             <div class="dashboard">
               <img
                 *ngIf="!user.avatar"
-                src="https://res-console.cloudinary.com/dv3g1lcnc/thumbnails/v1/image/upload/v1690364881/d2dvbnFwZGZ5eWw1aG90OGV6Zng=/preview"
+                src="https://cdn-icons-png.flaticon.com/512/64/64572.png"
                 alt="profile picture"
               />
               <img
