--- a/frontend/src/app/components/pages/account-page/account-page.component.css
+++ b/frontend/src/app/components/pages/account-page/account-page.component.css
@@ -1,13 +1,14 @@
-
 .wrapper {
-    height: 100%;  
-    min-height: 80vh;
-    padding: 1rem 0;
+    height: 100%;
+    min-height: calc(100vh - 40px) ; 
+    padding-top: 100px;
+    padding-bottom: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 2rem;
+    flex: 1; 
     overflow: hidden;
 }
 
@@ -16,9 +17,10 @@ app-title {
     text-align: center;
 }
 
-input {
+p {
     width: 100%;
     height: 100%;
+    margin: 0;
     border: none;
     border-bottom: 0 solid grey;
     transition: border-bottom 0.15s ease-out;
@@ -31,9 +33,10 @@ input {
   }
   
 .form {
-    margin: 0 auto;
     padding: 2rem;
-    width: 25rem;
+    width: 27rem;
+    height: 100%;
+    min-height: 600px;  
     background-color: #f3f3f3;
     border-radius: 5px;
     box-shadow: 0 0 8px rgb(185, 185, 185);
@@ -60,6 +63,13 @@ input {
     object-fit: cover;
 }
 
+.p-wrapper{
+  width: 80%;
+  padding: 1rem;
+  border-radius: 5px;
+  background-color: #eeeeee;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -74,8 +84,12 @@ input {
 }
 
 label {
-    padding: 0.3rem 0;
+    margin: 0.5rem 0 0;
     color: rgb(63, 81, 181);
+}
+
+app-button {
+  width: 100%;
 }
 
 
@@ -135,6 +149,19 @@ label {
 
 
 
+@media screen and (max-width: 700px) {
+  .form {
+    width: 90%;
+    max-width: 27rem;
+  }
+
+  .p-wrapper{
+    width: 100%;
+    max-width: 18rem;
+  }
+
+ 
+}
 
 
 
