--- a/frontend/src/app/components/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/pages/dashboard/dashboard.component.html
@@ -1,26 +1,22 @@
 <div class="container">
-  <mat-form-field>
-    <div class="form-field-container">
-      <mat-label>Filter</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Filter Products"
-        #input
-      />
-      <button
-        class="add-button"
-        button
-        mat-raised-button
-        color="warn"
-        (click)="openDialog()"
-      >
-        Add product
-      </button>
-    </div>
-  </mat-form-field>
+  <div [ngClass]="isSearchBarVisible ? 'show' : 'hide'">
+    <mat-form-field >
+      <div class="form-field-container">
+        <mat-label>Filter</mat-label>
+        <input
+          matInput
+          (keyup)="applyFilter($event)"
+          placeholder="Filter Products"
+          #input
+        />
+    
+      </div>
+    </mat-form-field>
+  </div>
 
+  
   <div class="mat-elevation-z8 table-container">
+    <app-title title="Table of Products"></app-title>
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Product Name</th>
@@ -77,7 +73,17 @@
           No data matching the filter "{{ input.value }}"
         </td>
       </tr>
+      
     </table>
+    <button
+    class="add-button"
+    button
+    mat-raised-button
+    color="warn"
+    (click)="openDialog()"
+  >
+    Add product
+  </button>
 
     <mat-paginator
       [pageSizeOptions]="[5, 10, 25, 100]"
