--- a/frontend/src/app/components/partials/button/button.component.css
+++ b/frontend/src/app/components/partials/button/button.component.css
@@ -2,22 +2,43 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    padding: 0;
+    margin: 0;
   }
   
   button {
     height: 3rem;
+    width: 100%;
+    margin: 0.5rem auto;
     border: none;
     outline: none;
     font-weight: 100;
     border-radius: 0.8rem;
-    width: 100%;
-    margin: 0.5rem auto;
     opacity: 0.8;
     color: gray;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
   }
   
   button:not(:disabled):hover{
   cursor: pointer;
-  opacity: 1;
+  opacity: 0.9;
   }
+
+  button:active {
+    opacity:1;
+  }
+
+  .button-icon, 
+  .button-text {
+    height: 100%;
+    display: inline-flex;
+    align-items: center;
+  }
+
   
+ 
+
