--- a/frontend/src/app/components/partials/footer/footer.component.css
+++ b/frontend/src/app/components/partials/footer/footer.component.css
@@ -1,14 +1,13 @@
 footer {
     width: 100%;
     height: 40px;
-    margin: 0 auto;
-    padding: 2rem;
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    line-height: 40px;
+    text-align: center;
 }
 p {
+    margin: 0;
+    padding: 0;
+    width: 80%;
     color: #a5a5a5;
+    display: inline-block;
 }
