--- a/frontend/src/app/components/partials/input-container/input-container.component.css
+++ b/frontend/src/app/components/partials/input-container/input-container.component.css
@@ -13,7 +13,7 @@
 
   .container {
     width: 100%;
-    margin-left: 0.5rem;
+    margin-left: 0rem;
     position:relative;
     display: flex;
     flex-direction: column;
@@ -54,9 +54,11 @@
     height: 2rem;
     margin-left: 0rem;
     display: flex;
+    align-items: center;
     align-self: flex-start;
     color: black;
   }
+
 
 
 
