--- a/frontend/src/app/components/partials/text-input/text-input.component.css
+++ b/frontend/src/app/components/partials/text-input/text-input.component.css
@@ -13,6 +13,7 @@ input {
     font-size: 1.1rem;
     outline: none;
     z-index: 1;
+    word-wrap: break-word;
   }
   
   input::placeholder{
@@ -31,3 +32,5 @@ input {
     align-items: center;
     align-self: flex-start;
   }
+
+
