--- a/frontend/src/app/components/pages/dashboard/dashboard.component.css
+++ b/frontend/src/app/components/pages/dashboard/dashboard.component.css
@@ -1,9 +1,11 @@
 .container {
-    padding-top: 40px;
-    min-height: 91vh;
+    padding-top: 60px;
+    padding-bottom: 40px;
+    height: 100%;
+    min-height: calc(100vh - 100px);
     max-width: 1200px;
-    overflow-y: auto;
-    overflow-x: hidden;
+    flex: 1;
+    overflow: hidden;
     text-align: center;
 }
 .hide {
@@ -26,7 +28,8 @@ app-title {
 }
 
 .table-container {
-    margin: 8rem 0 5rem;
+    margin-top: 2rem;
+    padding: 2rem 0 ;
     overflow-y: auto;
     align-self: center;
     display: flex;
