--- a/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.html
+++ b/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.html
@@ -35,10 +35,10 @@
           Create Account
         </a>
         <a
-          routerLink="/forgotten-password"
+          routerLink="/login"
           [queryParams]="{ returnUrl: returnUrl }"
         >
-          Forgotten Password?
+          Login
         </a>
       </div>
     </form>
