--- a/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.css
+++ b/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.css
@@ -35,6 +35,7 @@ form {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 0.7rem;
 }
 
 .register a {
@@ -47,3 +48,12 @@ span {
     color: #414141;
 }
 
+@media screen and (max-width: 700px) {
+    .details {
+      width: 100%;
+      padding: 1rem;
+      max-width: 25rem;
+    }
+  
+    
+  }
