--- a/frontend/src/app/components/pages/login-page/login-page.component.css
+++ b/frontend/src/app/components/pages/login-page/login-page.component.css
@@ -36,9 +36,20 @@ form {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 0.7rem;
 }
 
 .register a {
     color:  #3f51b5;
 }
+
+@media screen and (max-width: 700px) {
+    .details {
+      width: 100%;
+      padding: 1rem;
+      max-width: 25rem;
+    }
+
+    
+  }
 
