--- a/frontend/src/app/components/pages/register-page/register-page.component.css
+++ b/frontend/src/app/components/pages/register-page/register-page.component.css
@@ -21,7 +21,7 @@
 }
 
 form {
-  padding: 0.5rem 1rem 0;
+  padding: 0.5rem 0.5rem 0;
   width: 100%;
 }
 
@@ -42,3 +42,12 @@ app-button {
   margin-top: 1rem;
 }
 
+@media screen and (max-width: 700px) {
+  .details {
+    width: 100%;
+    padding: 1rem;
+    max-width: 25rem;
+  }
+
+  
+}
