--- a/frontend/src/app/components/partials/loading/loading.component.css
+++ b/frontend/src/app/components/partials/loading/loading.component.css
@@ -1,6 +1,6 @@
 .container{
     position: fixed;
-    width: 100%;
+    min-width: 100vw;
     height: 100%;
     background-color: #ffffffea;
     z-index: 10000;
